# vertebrae_reseach

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Sakaguchi_file/: README_SAKA.md  YOLO_development_plan.md  run_yolo_pipeline.sh  slice_label_merge.ipynb
Sakaguchi_file/3D_gaussian/: fracture_prob_map_make.ipynb  plot_fracture_map.ipynb
Sakaguchi_file/S_data_augmentation/: slice_data_augmentation_axial.ipynb
Sakaguchi_file/S_data_cut/: S_cut_test.ipynb  S_cut_train.ipynb  S_cut_val.ipynb
Sakaguchi_file/S_data_slice/: S_slice_axial.ipynb
Sakaguchi_file/S_model_learning/: resnet18_axial_BCEloss.ipynb  resnet18_axial_BCEloss_online.ipynb  resnet18_axial_learning.ipynb  resnet18_axial_learning_online_aug_1.ipynb  resnet18_axial_sampling_learning.ipynb  resnet18_axial_sampling_learning_2.ipynb
Sakaguchi_file/S_partitoning/: S_test_partitioning.ipynb  S_trainval_partitioning.ipynb
Sakaguchi_file/YOLO_data_conversion/: debug_mask.py  nifti_to_yolo.py  test_conversion.py
Sakaguchi_file/YOLO_datasets/vertebrae_fracture/configs/: vertebrae_fracture.yaml
Sakaguchi_file/YOLO_inference/: predict_yolo.py
Sakaguchi_file/YOLO_setup/: config_template.yaml  setup_yolo.py
Sakaguchi_file/YOLO_training/: train_yolo.py  train_yolo_notebook.ipynb
Sakaguchi_file/YOLO_visualization/: bbox_visualization.ipynb
Sakaguchi_file/dawnsampling/: axial_manifold.ipynb
YOLO/: description.md  preprocess_data.py  test_preprocessing.py  進捗レポート.md
YOLO/configs/: dataset.yaml  inference.yaml  training.yaml
YOLO/utils/: __init__.py  data_prep.py  evaluation.py  medical_utils.py
(+3 files in other folders)
